# math-utilities

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  script.sh
inc/: digits.h  divisors.h  fractions.h  other_functions.h  primes.h  special_numbers.h
src/: digits.cpp  divisors.cpp  fractions.cpp  other_functions.cpp  primes.cpp  special_numbers.cpp
tst/: CMakeLists.txt  digits_test.cpp  divisors_test.cpp  fractions_test.cpp  main.cpp  primes_test.cpp  script.sh  special_numbers_test.cpp
